<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_market"
        android:icon="@drawable/sparepart"
        android:title="Market"
        />
    <item
        android:id="@+id/nav_panggilmontir"
        android:icon="@drawable/montir"
        android:title="Mechanic"
        />
    <item
        android:id="@+id/nav_Post"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="Post"
        />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history"
        android:title="Notes"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="My Profile"/>
</menu>