...
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/border"/>

                <Button
                    android:id="@+id/addimage"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Masukkan Foto"/>
            </LinearLayout>
...
